[package]
name = "todo-frontend-rs"
version = "0.1.0"
description = "Todo List Using WASM"
authors = ["misut <pkr5207@gmail.com>"]
license = "MIT"
repository = "https://github.com/Danggamdong/todo-frontend-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
gloo-net = "0.2.6"
gloo-utils = { version = "0.1.6", features = ["serde"] }
serde = "1.0.152"
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
